--- a/emacs.org
+++ b/emacs.org
@@ -1105,7 +1105,7 @@ eshell git prompt
   (let* ((last-status-string (eshell--last-command-status-prompt-string))
          (dir-string (propertize (abbreviate-file-name (eshell/pwd)) 'face '(:foreground "CornflowerBlue")))
          (git-string (eshell--git-prompt-string))
-         (prompt-string (propertize (if (= (user-uid) 0) "#" "»") 'face '(:foreground "red3")))
+         (prompt-string (propertize "»" 'face '(:foreground "red3")))
          (right-pad-string (propertize " " 'face '(:foreground nil)))
          (prompt-string (s-collapse-whitespace (format "%s %s %s %s" dir-string git-string prompt-string right-pad-string))))
     (concat last-status-string prompt-string)))
