--- a/emacs.org
+++ b/emacs.org
@@ -961,6 +961,7 @@ argument makes the windows rotate backwards."
 (global-set-key (kbd "C-z") nil) ;; remove suspend
 (global-set-key (kbd "C-x C-z") nil)
 
+(global-set-key (kbd "C-x C-b") 'ibuffer)
 (global-set-key (kbd "M-*") 'calculator)
 (global-set-key (kbd "C-s") 'isearch-forward-regexp)
 (global-set-key (kbd "C-r") 'isearch-backward-regexp)
