Fix line numbers

--- a/emacs.org
+++ b/emacs.org
@@ -363,9 +363,6 @@ For long running processes, this will always toggle back and forth between the p
 
 (setq frame-title-format nil)
 
-
-(add-hook 'linum-before-numbering-hook (lambda () (set-face-attribute 'linum nil :foreground "#5683a2" :background nil)))
-
 (when (eq system-type 'darwin)
   (add-to-list 'default-frame-alist '(ns-transparent-titlebar . t))
   (add-to-list 'default-frame-alist '(ns-appearance . dark))
@@ -411,6 +408,9 @@ fix for cursor color in clients falling back to the default theme [[http:emacs.s
 (show-paren-mode t)
 
 (fset 'yes-or-no-p 'y-or-n-p)
+
+(fset 'linum-mode 'display-line-numbers-mode)
+(fset 'global-linum-mode 'global-display-line-numbers-mode)
 
 (setq history-delete-duplicates t)
 
