--- a/emacs.org
+++ b/emacs.org
@@ -387,12 +387,16 @@ mode line
          (buffer-name (buffer-name b))
          (file-name (buffer-file-name b))
          (pwd (jw--pwd))
-         (display-name (if (and file-name jw-mode-line-config-show-full-filenames) file-name buffer-name))
          (process-name (get-buffer-process b))
-         (process-id (when process-name (process-id process-name))))
+         (display-name (if process-name buffer-name
+                         (if jw-mode-line-config-show-full-filenames (or file-name pwd)
+                           buffer-name)))
+         (process-id (when process-name (process-id process-name)))
+         (projectile-project-raw (projectile-project-name))
+         (projectile-project (if (string= projectile-project-raw "-") nil projectile-project-raw)))
     (list (propertize display-name 'face 'mode-line-buffer-id
-                      'help-echo (format "Buffer name: %s\nFile name: %s\nProcess name: %s\npid: %s\npwd: %s\nMode line display: %s"
-                                         buffer-name (or file-name "N/A") (or process-name "N/A") (or process-id "N/A") pwd display-name)
+                      'help-echo (format "Buffer name: %s\nFile name: %s\nProcess name: %s\npid: %s\npwd: %s\nProjectile project: %s"
+                                         buffer-name (or file-name "N/A") (or process-name "N/A") (or process-id "N/A") pwd (or projectile-project "N/A"))
                       'mouse-face 'mode-line-highlight
                       'local-map jw--mode-line-buffer-id-keymap))))
 
