set some org styling

--- a/emacs.org
+++ b/emacs.org
@@ -1438,8 +1438,8 @@ If the server is connected and a prefix arg is provided, then invoke a quick /ms
       org-todo-keywords '((sequence "⚑" "⚐" "|" "✔" "✘"))
       org-hide-leading-stars t
       org-ellipsis " …"
-      org-pretty-entities nil ;; do not set this to t, it causes _ subscripts, which interfere with pg table names and such
-      org-hide-emphasis-markers t
+      org-pretty-entities nil ;; do not use this, it causes _ subscripts, which interfere with pg table names and such
+      org-hide-emphasis-markers nil ;; do not use this, interferes with things like example URLs being made italic
       org-fontify-done-headline t
       org-confirm-babel-evaluate nil
       org-link-shell-confirm-function nil
